Updated, completed homework

--- a/module1-define-ml-problems/LS_DS_231_assignment.ipynb
+++ b/module1-define-ml-problems/LS_DS_231_assignment.ipynb
@@ -547,7 +547,7 @@
     }
    ],
    "source": [
-    "df['Avg Start'].plot(kind='hist', bins=18)"
+    "df['Avg Finish'].plot(kind='hist', bins=18)"
    ]
   },
   {
@@ -617,7 +617,7 @@
     }
    ],
    "source": [
-    "df['Avg Start'].value_counts(normalize='True')"
+    "df['Avg Finish'].value_counts(normalize='True')"
    ]
   },
   {
